--- a/index.html
+++ b/index.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Measurement and Map Tabs</title>
+    <title>GNSS data visualization</title>
     <link rel="stylesheet" type="text/css" href="style.css">
   </head>
   <body>
-    <h1>Measurement and Map Tabs</h1>
+    <h1>GNSS data visualization</h1>
     <div>
       <button id="measurement-tab">Measurement Tab</button>
       <button id="map-tab">Map Tab</button>
+      <button id = "setting-tab">Setting Tab</button>
     </div>
 
     <div id="measurement-content" class="content">
@@ -31,6 +32,29 @@
       </div>
       <div id="map-area" class="map-area">
         <!-- Map area (to be populated with map data) -->
+      </div>
+    </div>
+
+    <div id ="setting-content" class="content">
+      <h2>Setting Tab</h2>
+      <div class="setting-container">
+        <!--**********not button container anymore 
+        but input fields and dropdowns-->
+
+        <label for ="satellite-count">Satellite count:</label>
+          <input type ="number" id ="satellite-count" name="satellite-count" min ="1" max="24" value ='12'>
+          <br><br>
+
+        <label for ="constellation">Constellation</label>
+          <select id = "constellation" name = "constellation">
+            <option value ="gps">GPS</option>
+            <option value ="glonass">GLONASS</option>
+            <option value ="galileo">Galileo</option>
+            <option value="beidou">Beidou</option>
+            <br><br>
+          </select>
+
+        <button
       </div>
     </div>
 
