--- a/index.html
+++ b/index.html
@@ -30,6 +30,20 @@
         <button id="start-datetime-selector">Start Datetime Selector</button>
         <button id="stop-datetime-selector">Stop Datetime Selector</button>
       </div>
+
+      <div class="parameter-container">
+        <label for ="longitude">Longitude</label>
+        <input type="number" id="longitude" name ="longitude" step ="0.000001" value="0">
+        <br><br>
+
+        <label for ="latitude">Latitude</label>
+        <input type="number" id="latitude" name ="latitude" step ="0.000001" value="0">
+        <br><br>
+
+        </select>
+
+      </div>
+
       <div id="map-area" class="map-area">
         <!-- Map area (to be populated with map data) -->
       </div>
